added alias and updated readme for running tests

--- a/01-js/package.json
+++ b/01-js/package.json
@@ -6,7 +6,20 @@
   "directories": {
     "test": "tests"
   },
+  "scripts": {
+    "anagram": "npx jest ./tests/anagram.test.js",
+    "calculator": "npx jest ./tests/calculator.test.js",
+    "countVowels": "npx jest ./tests/countVowels.test.js",
+    "expenditure-analysis": "npx jest ./tests/expenditure-analysis.test.js",
+    "findLargestElement": "npx jest ./tests/findLargestElement.test.js",
+    "palindrome": "npx jest ./tests/palindrome.test.js",
+    "todo-list": "npx jest ./tests/todo-list.test.js",
+    "all": "npx jest ./tests/"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^29.7.0"
+  }
 }
